--- a/assets/style.css
+++ b/assets/style.css
@@ -60,3 +60,9 @@ button{
     flex-direction: row;
     justify-content: space-evenly;
 }
+
+.card{
+    border: white 20px;
+    font-family: 'Castoro Titling', cursive;
+   
+}
