--- a/assets/style.css
+++ b/assets/style.css
@@ -1,74 +1,102 @@
+nav {
+  text-align: center;
+  background-color: #92b69f;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline-block;
+  margin: 0 60px; 
+}
+
+nav a {
+  text-decoration: none !important;
+  color: #efefef !important; 
+}
 
 header{
-    margin-top: 20px;
-    height: 60px;
-    font-family: 'Roboto Condensed', sans-serif;
+    background-color: #92b69f;
 }
 
-li{
-    font-size: larger;
-    align-items: center;
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px; 
 }
 
-a{
-    text-decoration:none !important;
-    color: green !important;
+.image-container img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
-
-
-p{  
-    font-family: 'Roboto Condensed', sans-serif;   
-}
-
-
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 100px;
-}
-
-h1, h3{
-    font-family: 'Castoro Titling', cursive;
-}
-
-.homepagecta, .aboutcta, .contactcta{
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   text-align: center;
-   margin: 30px 300px 30px;
-}
-
-button{
-    background-color: #baffd4;
-    border: 2px black;
-    width: 180px;
-    align-self: center;
-}
-
-.completedwebsites a{ 
-    background-color: #baffd4 !important;
-    color: black !important;
-    border: 2px black !important;
-}
-
-.completedwebsites{
+.comp3-container{
+    background-color: #92b69f;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    padding-bottom: 80px;
 }
 
-.card{
-    border: white 20px;
-    font-family: 'Castoro Titling', cursive;
-   
+.menu{
+    padding-left: 60px;
+    padding-right: 600px;
 }
 
-.footer{
-    display: flex;
-    flex-direction: column;
-    text-align: end;
+.about-me {
+    padding-left: 100px;
 }
+
+.about-me h4{
+    text-align: right;
+    width: 400px;
+}
+
+.about-me p{
+    text-align: left;
+    width: 400px;
+}
+
+
+footer {
+    background-color: #92b69f; 
+    color: #efefef; 
+    padding: 10px 0; 
+  }
+  
+  .footer-container {
+    max-width: 1200px; 
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  .footer-links {
+    margin-bottom: 8px;
+  }
+  
+  .footer-links a {
+    color: blanchedalmond;
+    text-decoration: none;
+  }
+  
+  .social-media {
+    margin-bottom: 10px; 
+  }
+  
+  .social-media a {
+    text-decoration: none;
+ 
+  }
+  
+  .copyright {
+    font-size: 14px;
+  }
+  
