--- a/assets/style.css
+++ b/assets/style.css
@@ -1,102 +1,141 @@
 nav {
-  text-align: center;
-  background-color: #92b69f;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+    text-align: center;
+    background-color: #dce7cd;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 nav li {
-  display: inline-block;
-  margin: 0 60px; 
+    display: inline-block;
+    margin: 0 60px;
+
 }
 
 nav a {
-  text-decoration: none !important;
-  color: #efefef !important; 
+    text-decoration: none !important;
+    color: #006400;
+    font-weight: bold;
+    font-size: 20px;
 }
 
-header{
+header {
     background-color: #92b69f;
+    height: 400px;
 }
 
 .image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 400px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .image-container img {
-  max-width: 100%;
-  max-height: 100%;
+    max-width: 50%;
 }
 
-.comp3-container{
-    background-color: #92b69f;
+.divider-photo{
+    background-image: url(../images/pexels-fauxels-3182774.jpg);
+    background-color: #cccccc;
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: 'Crimson Pro';
+}
+
+.comp3-container {
     display: flex;
     flex-direction: row;
     padding-bottom: 80px;
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+    background-color: #dce7cd;
 }
 
+.comp3-container li {
+    list-style-type: none;
+}
+
+.comp3-container a {
+    text-decoration: none;
+    color: darkgreen;
+    font-weight: bold;
+}
+
+a{
+    font-family: 'Crimson pro';
+}
+
+h4{
+    font-family: 'Castoro titling';
+}
+
+p{
+    font-family: 'quicksand';
+}
 .menu{
-    padding-left: 60px;
-    padding-right: 600px;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-right: 40px;
+    width: 300px;
+    background-color: #dce7cd;
 }
 
-.about-me {
-    padding-left: 100px;
+.about-me{
+    padding-left: 40px;
+    padding-right: 40px;
+    width: 800px;
 }
 
-.about-me h4{
-    text-align: right;
-    width: 400px;
-}
-
-.about-me p{
-    text-align: left;
-    width: 400px;
-}
-
-
-footer {
-    background-color: #92b69f; 
-    color: #efefef; 
-    padding: 10px 0; 
+.vl {
+    border-left: 3px solid #006400;
+    border-right:#92b69f 3px solid;
+    height: 400px;
+    
   }
-  
-  .footer-container {
-    max-width: 1200px; 
-    margin: 0 auto;
+
+
+
+.comp3-cta {
+    background-color: #92b69f;
+    border: none;
+    color: #006400;
+    font-weight: bold;
+    padding: 12px 30px;
+    font-family: 'Crimson pro';
     text-align: center;
-  }
-  
-  .footer-links {
-    margin-bottom: 8px;
-  }
-  
-  .footer-links a {
-    color: blanchedalmond;
     text-decoration: none;
-  }
-  
-  .social-media {
-    margin-bottom: 10px; 
-  }
-  
-  .social-media a {
-    text-decoration: none;
- 
-  }
-  
-  .copyright {
-    font-size: 14px;
-  }
-  
+    display: inline-block;
+    font-size: 18px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+footer{
+    background-color: #92b69f !important;
+    text-align: center;
+    font-size: 12px;
+    padding: 10px;
+}
+
+
+
