--- a/assets/style.css
+++ b/assets/style.css
@@ -26,17 +26,6 @@ nav a {
     font-size: 20px;
 }
 
-header {
-    background-color: #92b69f;
-    height: 400px;
-}
-
-.image-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .image-container img {
     max-width: 50%;
 }
@@ -81,11 +70,11 @@ header {
     font-weight: bold;
 }
 
-a{
+a, h1{
     font-family: 'Crimson pro';
 }
 
-h4{
+h4, h3{
     font-family: 'Castoro titling';
 }
 
@@ -100,7 +89,7 @@ p{
     background-color: #dce7cd;
 }
 
-.about-me{
+.about-me, .portfolio{
     padding-left: 40px;
     padding-right: 40px;
     width: 800px;
@@ -137,5 +126,16 @@ footer{
     padding: 10px;
 }
 
+footer img{
+    height: 200px;
+}
 
+header{
+    background-color: #92b69f;
+}
 
+.image-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
