added reviews page, next step is to add contact page

--- a/assets/style.css
+++ b/assets/style.css
@@ -165,3 +165,17 @@ header{
     font-family: 'Crimson Pro';
     font-size: 72px;
 }
+
+.reviews-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.card{
+    padding-top: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    width: 40%;
+}
