--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,7 @@ nav a {
     max-width: 50%;
 }
 
-.divider-photo{
+.divider-photo {
     background-image: url(../images/blurbkgrd.jpg);
     background-color: #cccccc;
     height: 400px;
@@ -74,18 +74,21 @@ nav a {
     font-weight: bold;
 }
 
-a, h1{
+a,
+h1 {
     font-family: 'Crimson pro';
 }
 
-h4, h3{
+h4,
+h3 {
     font-family: 'Crimson pro';
 }
 
-p{
+p {
     font-family: 'quicksand';
 }
-.menu{
+
+.menu {
     padding-top: 30px;
     padding-left: 20px;
     padding-right: 40px;
@@ -93,52 +96,54 @@ p{
     background-color: #dce7cd;
 }
 
-.about-me, .portfolio, .services-container{
+.about-me,
+.portfolio,
+.services-container, .reviews-container {
     padding-left: 40px;
     padding-right: 40px;
     width: 800px;
 }
 
-.ethos-container{
+.ethos-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding-bottom: 80px;
     padding-top: 40px;
     padding-left: 200px;
     padding-right: 200px;
     background-color: #dce7cd;
-    
+
 }
 
 .vl {
     border-left: 3px solid #006400;
-    border-right:#92b69f 3px solid;
-    height: 400px; 
-  }
+    border-right: #92b69f 3px solid;
+    height: 400px;
+}
 
 
-footer{
+footer {
     background-color: #92b69f !important;
     text-align: center;
     font-size: 12px;
     padding: 10px;
 }
 
-footer img{
+footer img {
     height: 200px;
 }
 
-header{
+header {
     background-color: #92b69f;
 }
 
-.image-container{
+.image-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.hero-portfolio{
+.hero-portfolio {
     background-image: url(../images/ptfliobkgrd.jpg);
     background-color: #cccccc;
     height: 240px;
@@ -148,7 +153,7 @@ header{
     position: relative;
 }
 
-.hero-text-portfolio{
+.hero-text-portfolio {
     text-align: center;
     position: absolute;
     top: 50%;
@@ -160,49 +165,49 @@ header{
     font-size: 72px;
 }
 
-.reviews-container, .contact-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
 
 
 
-.card{
+
+.card {
     padding-top: 10px;
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 10px;
-    width: 40%;
+
 }
 
-    .portfolio-card{
-        width: 70%;
-        margin: 40px;
-    }
+
+
+.portfolio-card {
+    width: 70%;
+    margin: 40px;
+}
 
 
 
-.portfolio{
+.portfolio {
     display: flex;
     flex-direction: column;
     width: 70%;
-    
+
 }
 
 
 
-.contact-card,.form-card{
+.contact-card,
+.form-card {
     padding: 50px;
 }
 
-.submit-form, .comp3-cta{
-    background-color:#006400;
-    color:#cccccc;
+.submit-form,
+.comp3-cta {
+    background-color: #006400;
+    color: #cccccc;
     margin-top: 10px;
     padding: 5px;
     border: 16px black;
     border-radius: 12px;
     width: 160px;
-    
+
 }
