--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,16 @@
+/*navigation css and MQ*/
+
+/*large screens
+
 nav {
-    text-align: center;
     background-color: #dce7cd;
     height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    box-sizing: border-box;
+    overflow: hidden;
+    float: center;
 }
 
 nav ul {
@@ -25,6 +31,26 @@ nav a {
     font-weight: bold;
     font-size: 20px;
 }
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+/*medium screens
+@media screen and (max-width: 992px) {
+
+}
+
+/*small screens
+@media screen and (max-width: 600px) {
+   
+}
+
+
+
+
 
 .image-container img {
     max-width: 50%;
@@ -211,3 +237,123 @@ header {
     width: 160px;
 
 }
+
+/*media queries*/
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+.navigationbar{
+    background-color: #006400;
+   
+}
+    /* Dropdown Button */
+.dropbtn {
+    background-color: #006400;;
+    color: #dce7cd;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #dce7cd;
+    color:#006400;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #006400;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: #dce7cd;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
+}
+
+   
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .navigationbar{
+        background-color: #006400;
+    }
+        /* Dropdown Button */
+    .dropbtn {
+        background-color: #006400;;
+        color: #dce7cd;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+      }
+      
+      /* Dropdown button on hover & focus */
+      .dropbtn:hover, .dropbtn:focus {
+        background-color: #dce7cd;
+        color:#006400;
+      }
+      
+      /* The container <div> - needed to position the dropdown content */
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+    
+      
+      /* Dropdown Content (Hidden by Default) */
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #006400;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      
+      /* Links inside the dropdown */
+      .dropdown-content a {
+        color: #dce7cd;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+    
+      
+      
+      
+      /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+      .show {display:block;}
+}
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
