--- a/assets/style.css
+++ b/assets/style.css
@@ -1,56 +1,6 @@
 /*navigation css and MQ*/
 
-/*large screens
-
-nav {
-    background-color: #dce7cd;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    box-sizing: border-box;
-    overflow: hidden;
-    float: center;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav li {
-    display: inline-block;
-    margin: 0 60px;
-
-}
-
-nav a {
-    text-decoration: none !important;
-    color: #006400;
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-
-/*medium screens
-@media screen and (max-width: 992px) {
-
-}
-
-/*small screens
-@media screen and (max-width: 600px) {
-   
-}
-
-
-
-
+/*
 
 .image-container img {
     max-width: 50%;
@@ -148,20 +98,9 @@ p {
 }
 
 
-footer {
-    background-color: #92b69f !important;
-    text-align: center;
-    font-size: 12px;
-    padding: 10px;
-}
 
-footer img {
-    height: 200px;
-}
 
-header {
-    background-color: #92b69f;
-}
+
 
 .image-container {
     display: flex;
@@ -243,117 +182,558 @@ header {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
-.navigationbar{
-    background-color: #006400;
-   
-}
-    /* Dropdown Button */
-.dropbtn {
-    background-color: #006400;;
-    color: #dce7cd;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #dce7cd;
-    color:#006400;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
+    /* NAVIGATION */
 
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #006400;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: #dce7cd;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
-}
+    .navigationbar {
+        background-color: #92b69f;
 
-   
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-    .navigationbar{
-        background-color: #006400;
     }
-        /* Dropdown Button */
+
     .dropbtn {
-        background-color: #006400;;
+        background-color: #006400;
         color: #dce7cd;
-        padding: 16px;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
-      }
-      
-      /* Dropdown button on hover & focus */
-      .dropbtn:hover, .dropbtn:focus {
+        margin-top: 12px;
+        margin-right: 5px;
+        padding: 10px;
+        border: 5px black;
+        border-radius: 20px;
+        width: 70px;
+        float: right;
+        font-family: 'crimson pro';
+        font-size: 20px;
+
+    }
+
+    .nav-right {
+        float: right;
+        justify-content: center;
+    }
+
+    .dropbtn:hover {
         background-color: #dce7cd;
-        color:#006400;
-      }
-      
-      /* The container <div> - needed to position the dropdown content */
-      .dropdown {
-        position: relative;
+        color: #006400;
+    }
+
+    .dropdown {
+        position: absolute;
         display: inline-block;
-      }
-    
-      
-      /* Dropdown Content (Hidden by Default) */
-      .dropdown-content {
+    }
+
+    .dropdown-content {
         display: none;
         position: absolute;
+        float: right;
+        right: 0;
         background-color: #006400;
         min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
-      }
-      
-      /* Links inside the dropdown */
-      .dropdown-content a {
+        border: #006400 2px double;
+        border-radius: 10px;
+    }
+
+    .dropdown-content a {
         color: #dce7cd;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
-      }
+        font-family: 'Crimson Pro';
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    /*This links to JavaScript do not delete!!*/
+    .show {
+        display: block;
+    }
+
+    /* HERO CONTAINER */
+    .divider-photo {
+        background-image: url(../images/blurbkgrd.jpg);
+        background-color: #cccccc;
+        height: 120px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+    }
+
+    .hero-text {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-family: 'Crimson Pro';
+    }
+
+    .herotitle {
+        font-size: 28px;
+    }
+
+    .herotagline {
+        font-size: 14px;
+    }
+
+    /*COMP3 CONTAINER MQ*/
+    .comp3-container,
+    .ethos-container {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 80px;
+        padding-top: 40px;
+        padding-left: 40px;
+        padding-right: 40px;
+        background-color: #92b69f;
+    }
+
+    .comp3-container li {
+        list-style-type: none;
+    }
+
+    .comp3-container a {
+        text-decoration: none;
+        color: darkgreen;
+        font-weight: bold;
+    }
+
+    .highlightsmenu,
+    .vl {
+        display: none;
+    }
+
+    .comp3-cta {
+        background-color: #006400;
+        color: #cccccc;
+        margin-top: 10px;
+        padding: 5px;
+        border: 16px black;
+        border-radius: 12px;
+        width: 160px;
+        float: right;
+    }
+
+    /*HOMEPAGE font MEDIA QUERIES*/
+    .about-me p, .ethos-container p{
+        font-family: 'quicksand';
+        font-size: 12;
+        float: right 
+    }
+
+    .about-me h4, .ethos-container h4{
+        font-family: 'crimson pro';
+        font-size: 28px; 
+    }
+
+    /*FOOTER MEDIA QUERIES*/
+    footer {
+        background-color: #92b69f !important;
+        text-align: center;
+        font-size: 12px;
+        padding: 10px;
+    }
+
+    footer img {
+        height: 100px;
+    }
+
+    /*PORTFOLIO COMPONENT MEDIA QUERIES*/
+    .portfolio {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .portfolio-card {
+        background-color: #92b69f !important;
+        border: none !important;
+        margin-bottom: 20px;
+    }
+
+    .portfolio img {
+        float: left;
+        width: 80px;
+    }
+
+    .portfolio h1 {
+
+        font-family: 'crimson pro';
+        font-size: 28px;
+    }
+
+    .portfolio p {
+        font-family: 'quicksand';
+        font-size: 12;
+        float: right;
+    }
+
     
-      
-      
-      
-      /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-      .show {display:block;}
+
+
+    /*SERVICES MEDIA QUERIES*/
+    .services-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .services-container h3 {
+        font-family: 'crimson pro';
+        font-size: 28px;
+    }
+
+    .services-container p {
+        font-family: 'quicksand';
+        font-size: 12;
+    }
+
+    /*CONTACT PAGE CONTAINERS*/
+    .contact-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .contact-container h3 {
+        font-family: 'crimson pro';
+        font-size: 28px;
+    }
+
+    .contact-container p {
+        font-family: 'quicksand';
+        font-size: 12;
+    }
+
+    /*REVIEWS CONTAINER MEDIA QUERIES */
+    .reviews-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .reviews-container-card {
+        background-color: #92b69f !important;
+        border: none !important;
+        margin-bottom: 20px;
+    }
+
+    .reviews-container img {
+        float: left;
+        width: 80px;
+        padding-right: 20px;
+    }
+
+    .reviews-container h1 {
+        font-family: 'crimson pro';
+        font-size: 28px;
+    }
+
+    .reviews-container p {
+        font-family: 'quicksand';
+        font-size: 12;
+        
+    }
+
+}
+
+
+
+
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+    /* NAVIGATION */
+    .navigationbar {
+        background-color: #92b69f;
+
+    }
+
+    .dropbtn {
+        background-color: #006400;
+        color: #dce7cd;
+        margin-top: 12px;
+        margin-right: 5px;
+        padding: 10px;
+        border: 5px black;
+        border-radius: 20px;
+        width: 70px;
+        float: right;
+        font-family: 'crimson pro';
+        font-size: 20px;
+
+    }
+
+    .nav-right {
+        float: right;
+        justify-content: center;
+    }
+
+    .dropbtn:hover {
+        background-color: #dce7cd;
+        color: #006400;
+    }
+
+    .dropdown {
+        position: absolute;
+        display: inline-block;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        float: right;
+        right: 0;
+        background-color: #006400;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        border: #006400 2px double;
+        border-radius: 10px;
+    }
+
+    .dropdown-content a {
+        color: #dce7cd;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        font-family: 'Crimson Pro';
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    /* do not delete, it's for JavaScript! */
+    .show {
+        display: block;
+    }
+
+    /*HERO*/
+
+    .divider-photo {
+        background-image: url(../images/blurbkgrd.jpg);
+        background-color: #cccccc;
+        height: 300px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+    }
+
+    .hero-text {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-family: 'Crimson Pro';
+    }
+
+    /*HIDE HIGHLIGHTS ON SMALLER SCREENS*/
+    .highlightsmenu,
+    .vl {
+        display: none;
+    }
+
+    /*PORTFOLIO COMPONENT MEDIA QUERIES*/
+
+    .portfolio {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .portfolio-card {
+        background-color: #92b69f !important;
+        border: none !important;
+        margin-bottom: 20px;
+    }
+
+    .portfolio img {
+        float: left;
+        width: 80px;
+    }
+
+    .portfolio h1 {
+        font-family: 'crimson pro';
+        font-size: 28px;
+    }
+
+    .portfolio p {
+        font-family: 'quicksand';
+        font-size: 12;
+        float: right;
+    }
+
+    /*COMP3-CONTAINER MEDIA QUERIES*/
+    .comp3-container,
+    .ethos-container {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 80px;
+        padding-top: 40px;
+        padding-left: 40px;
+        padding-right: 40px;
+        background-color: #92b69f;
+    }
+
+    .comp3-container li {
+        list-style-type: none;
+    }
+
+    .comp3-container a {
+        text-decoration: none;
+        color: darkgreen;
+        font-weight: bold;
+    }
+
+    .comp3-cta {
+        background-color: #006400;
+        color: #cccccc;
+        margin-top: 10px;
+        padding: 5px;
+        border: 16px black;
+        border-radius: 12px;
+        width: 160px;
+        float: right;
+    }
+
+    /*FOOTER MEDIA QUERIES*/
+
+    footer {
+        background-color: #92b69f !important;
+        text-align: center;
+        font-size: 12px;
+        padding: 10px;
+    }
+
+    footer img {
+        height: 100px;
+
+    }
+
+
 }
 
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {}
+@media only screen and (min-width: 768px) {
+    .divider-photo {
+        background-image: url(../images/blurbkgrd.jpg);
+        background-color: #cccccc;
+        height: 300px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+    }
+
+    .hero-text {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-family: 'Crimson Pro';
+    }
+
+    /*HIGHLIGHTS MENU REVEAL*/
+    .highlightsmenu,
+    .vl {
+        display: block;
+    }
+
+    .vl {
+        border-left: 3px solid #006400;
+        border-right: #92b69f 3px solid;
+        height: 400px;
+    }
+
+    /*OOMP3 CONTAINER NOW ROW*/
+    .comp3-container,
+    .ethos-container {
+        display: flex;
+        flex-direction: row;
+        padding-bottom: 80px;
+        padding-top: 40px;
+        padding-left: 40px;
+        padding-right: 40px;
+        background-color: #92b69f;
+    }
+
+    .comp3-container li {
+        list-style-type: none;
+    }
+
+    .comp3-container a {
+        text-decoration: none;
+        color: darkgreen;
+        font-weight: bold;
+    }
+
+    .comp3-cta {
+        background-color: #006400;
+        color: #cccccc;
+        margin-top: 10px;
+        padding: 5px;
+        border: 16px black;
+        border-radius: 12px;
+        width: 160px;
+        float: right;
+    }
+
+    .ethos-container {
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .highlightsmenu {
+        padding-top: 30px;
+        padding-left: 20px;
+        padding-right: 40px;
+        width: 300px;
+        background-color: #dce7cd;
+    }
+
+    .about-me,
+    .portfolio,
+    .services-container,
+    .reviews-container {
+        padding-left: 40px;
+        padding-right: 40px;
+        width: 800px;
+    }
+}
+
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {}
+@media only screen and (min-width: 992px) {
+
+    .divider-photo {
+        background-image: url(../images/blurbkgrd.jpg);
+        background-color: #cccccc;
+        height: 400px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+    }
+
+    .hero-text {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-family: 'Crimson Pro';
+    }
+
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {}
