--- a/assets/style.css
+++ b/assets/style.css
@@ -1,184 +1,3 @@
-/*navigation css and MQ*/
-
-/*
-
-.image-container img {
-    max-width: 50%;
-}
-
-.divider-photo {
-    background-image: url(../images/blurbkgrd.jpg);
-    background-color: #cccccc;
-    height: 400px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-
-.hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-family: 'Crimson Pro';
-}
-
-
-
-
-
-.comp3-container {
-    display: flex;
-    flex-direction: row;
-    padding-bottom: 80px;
-    padding-top: 40px;
-    padding-left: 40px;
-    padding-right: 40px;
-    background-color: #dce7cd;
-}
-
-.comp3-container li {
-    list-style-type: none;
-}
-
-.comp3-container a {
-    text-decoration: none;
-    color: darkgreen;
-    font-weight: bold;
-}
-
-a,
-h1 {
-    font-family: 'Crimson pro';
-}
-
-h4,
-h3 {
-    font-family: 'Crimson pro';
-}
-
-p {
-    font-family: 'quicksand';
-}
-
-.menu {
-    padding-top: 30px;
-    padding-left: 20px;
-    padding-right: 40px;
-    width: 300px;
-    background-color: #dce7cd;
-}
-
-.about-me,
-.portfolio,
-.services-container, .reviews-container {
-    padding-left: 40px;
-    padding-right: 40px;
-    width: 800px;
-}
-
-.ethos-container {
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 80px;
-    padding-top: 40px;
-    padding-left: 200px;
-    padding-right: 200px;
-    background-color: #dce7cd;
-
-}
-
-.vl {
-    border-left: 3px solid #006400;
-    border-right: #92b69f 3px solid;
-    height: 400px;
-}
-
-
-
-
-
-
-.image-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.hero-portfolio {
-    background-image: url(../images/ptfliobkgrd.jpg);
-    background-color: #cccccc;
-    height: 240px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-
-.hero-text-portfolio {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-shadow: 1px 1px #006400;
-    font-family: 'Crimson Pro';
-    font-size: 72px;
-}
-
-
-
-
-
-.card {
-    padding-top: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 10px;
-
-}
-
-
-
-.portfolio-card {
-    width: 70%;
-    margin: 40px;
-}
-
-
-
-.portfolio {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-
-}
-
-
-
-.contact-card,
-.form-card {
-    padding: 50px;
-}
-
-.submit-form,
-.comp3-cta {
-    background-color: #006400;
-    color: #cccccc;
-    margin-top: 10px;
-    padding: 5px;
-    border: 16px black;
-    border-radius: 12px;
-    width: 160px;
-
-}
-
-/*media queries*/
-
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
@@ -191,17 +10,16 @@ p {
 
     .dropbtn {
         background-color: #006400;
-        color: #dce7cd;
-        margin-top: 12px;
+        color: #cccccc;
+        margin-top: 20px;
         margin-right: 5px;
-        padding: 10px;
-        border: 5px black;
-        border-radius: 20px;
-        width: 70px;
+        padding: 8px;
+        border: 10px black;
+        border-radius: 10px;
+        width: 80px;
         float: right;
-        font-family: 'crimson pro';
+        font-family: 'Crimson Pro';
         font-size: 20px;
-
     }
 
     .nav-right {
@@ -283,8 +101,10 @@ p {
         flex-direction: column;
         padding-bottom: 80px;
         padding-top: 40px;
-        padding-left: 40px;
+        padding-left: 20px;
         padding-right: 40px;
+        margin-top: 40px #92b69f;;
+        margin-bottom: 40px #92b69f;
         background-color: #92b69f;
     }
 
@@ -303,35 +123,42 @@ p {
         display: none;
     }
 
-    .comp3-cta {
+    .comp3-cta, .submit-form{
         background-color: #006400;
         color: #cccccc;
         margin-top: 10px;
         padding: 5px;
         border: 16px black;
         border-radius: 12px;
-        width: 160px;
+        width: 120px;
         float: right;
+        font-family: 'Crimson Pro';
+        font-size: 20px;
     }
 
     /*HOMEPAGE font MEDIA QUERIES*/
-    .about-me p, .ethos-container p{
+    .about-me p,
+    .ethos-container p {
         font-family: 'quicksand';
-        font-size: 12;
-        float: right 
+        font-size: 14;
+        
     }
 
-    .about-me h4, .ethos-container h4{
+    .about-me h4,
+    .ethos-container h4 {
         font-family: 'crimson pro';
-        font-size: 28px; 
+        font-size: 24px;
     }
 
     /*FOOTER MEDIA QUERIES*/
     footer {
         background-color: #92b69f !important;
         text-align: center;
+        font-family: 'Quicksand';
         font-size: 12px;
         padding: 10px;
+        margin-top: 40px #92b69f;;
+        margin-bottom: 20px #92b69f;
     }
 
     footer img {
@@ -343,6 +170,7 @@ p {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        padding: 20px;
     }
 
     .portfolio-card {
@@ -354,6 +182,9 @@ p {
     .portfolio img {
         float: left;
         width: 80px;
+        border-radius: 20%;
+        margin: 10px;
+        
     }
 
     .portfolio h1 {
@@ -364,15 +195,15 @@ p {
 
     .portfolio p {
         font-family: 'quicksand';
-        font-size: 12;
+        font-size: 14;
         float: right;
     }
 
-    
+
 
 
     /*SERVICES MEDIA QUERIES*/
-    .services-container{
+    .services-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -385,14 +216,15 @@ p {
 
     .services-container p {
         font-family: 'quicksand';
-        font-size: 12;
+        font-size: 14;
     }
 
     /*CONTACT PAGE CONTAINERS*/
-    .contact-container{
+    .contact-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        
     }
 
     .contact-container h3 {
@@ -402,8 +234,40 @@ p {
 
     .contact-container p {
         font-family: 'quicksand';
-        font-size: 12;
+        font-size: 14;
     }
+
+    .form-card, .contact-card{
+        padding: 40px;
+        
+    }
+
+    label{
+        font-family: 'Quicksand';
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    input[type=text] {
+        border: 2px solid #006400;
+        border-radius: 4px;
+      }
+
+      input[type=number] {
+        border: 2px solid #006400;
+        border-radius: 4px;
+      }
+
+      textarea {
+        width: 100%;
+        height: 150px;
+        padding: 12px 20px;
+        box-sizing: border-box;
+        border: 2px solid #006400;
+        border-radius: 4px;
+        background-color: #f8f8f8;
+        resize: none;
+      }
 
     /*REVIEWS CONTAINER MEDIA QUERIES */
     .reviews-container {
@@ -421,7 +285,8 @@ p {
     .reviews-container img {
         float: left;
         width: 80px;
-        padding-right: 20px;
+        border-radius: 20%;
+        margin: 10px;
     }
 
     .reviews-container h1 {
@@ -432,7 +297,7 @@ p {
     .reviews-container p {
         font-family: 'quicksand';
         font-size: 12;
-        
+
     }
 
 }
@@ -558,12 +423,12 @@ p {
 
     .portfolio h1 {
         font-family: 'crimson pro';
-        font-size: 28px;
+        font-size: 32px;
     }
 
     .portfolio p {
         font-family: 'quicksand';
-        font-size: 12;
+        font-size: 16px;
         float: right;
     }
 
@@ -589,7 +454,7 @@ p {
         font-weight: bold;
     }
 
-    .comp3-cta {
+    .comp3-cta, .submit-form {
         background-color: #006400;
         color: #cccccc;
         margin-top: 10px;
@@ -605,12 +470,112 @@ p {
     footer {
         background-color: #92b69f !important;
         text-align: center;
-        font-size: 12px;
+        font-size: 14px;
         padding: 10px;
     }
 
     footer img {
-        height: 100px;
+        height: 160px;
+
+    }
+
+    /*SERVICES MEDIA QUERIES*/
+    .services-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .services-container h3 {
+        font-family: 'crimson pro';
+        font-size: 32px;
+    }
+
+    .services-container p {
+        font-family: 'quicksand';
+        font-size: 18px;
+    }
+
+    /*CONTACT PAGE CONTAINERS*/
+    .contact-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+    }
+
+    .contact-container h3 {
+        font-family: 'crimson pro';
+        font-size: 32px;
+    }
+
+    .contact-container p {
+        font-family: 'quicksand';
+        font-size: 18px;
+    }
+
+    .form-card, .contact-card {
+        padding: 40px;
+        
+    }
+
+    label{
+        font-family: 'Quicksand';
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    input[type=text] {
+        border: 2px solid #006400;
+        border-radius: 4px;
+        width: 100%;
+      }
+
+      input[type=number] {
+        border: 2px solid #006400;
+        border-radius: 4px;
+        width: 100%;
+      }
+
+      textarea {
+        width: 100%;
+        height: 150px;
+        padding: 12px 20px;
+        box-sizing: border-box;
+        border: 2px solid #006400;
+        border-radius: 4px;
+        background-color: #f8f8f8;
+        resize: none;
+      }
+
+    /*REVIEWS CONTAINER MEDIA QUERIES */
+    .reviews-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .reviews-container-card {
+        background-color: #92b69f !important;
+        border: none !important;
+        margin-bottom: 20px;
+    }
+
+    .reviews-container img {
+        float: left;
+        width: 80px;
+        border-radius: 20%;
+        margin: 10px;
+    }
+
+    .reviews-container h1 {
+        font-family: 'crimson pro';
+        font-size: 32px;
+    }
+
+    .reviews-container p {
+        font-family: 'quicksand';
+        font-size: 18px;
 
     }
 
